--- a/profesional-web/package.json
+++ b/profesional-web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.0.1",
     "astro": "^4.2.4",
     "tailwindcss": "^3.4.1"
   }
